--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
+        "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
+        "build": "webpack --config ./webpack.config.js --env mode=prod",
         "lint": "eslint . --ext .ts",
         "lint:fix": "npx eslint --ext .ts --fix"
     },
@@ -15,11 +17,21 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.45.1",
         "@typescript-eslint/parser": "^5.45.1",
+        "clean-webpack-plugin": "^4.0.0",
+        "css-loader": "^6.7.3",
         "eslint": "^7.27.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.0",
+        "eslint-webpack-plugin": "^3.2.0",
+        "html-webpack-plugin": "^5.5.0",
         "prettier": "2.2.1",
-        "typescript": "^4.9.3"
+        "style-loader": "^3.3.1",
+        "ts-loader": "^9.4.2",
+        "typescript": "^4.9.3",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1",
+        "webpack-merge": "^5.8.0"
     }
 }
