--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "name": "online-store-team",
     "version": "1.0.0",
     "description": "",
+    "private": true,
     "scripts": {
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
         "lint": "eslint . --ext .ts",
-        "lint:fix": "npx eslint --ext .ts --fix"
+        "lint-fix": "npx eslint --ext js,jsx,ts,tsx ./src --fix"
     },
     "repository": {
         "type": "git",
@@ -14,24 +15,55 @@
     },
     "author": "",
     "license": "ISC",
+    "babel": {
+        "presets": [
+            "@babel/preset-env",
+            "@babel/preset-typescript"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            "last 2 versions",
+            ">0.5%",
+            "not dead"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
     "devDependencies": {
+        "@babel/core": "^7.20.5",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-typescript": "^7.18.6",
         "@typescript-eslint/eslint-plugin": "^5.45.1",
         "@typescript-eslint/parser": "^5.45.1",
-        "clean-webpack-plugin": "^4.0.0",
+        "babel-loader": "^9.1.0",
         "css-loader": "^6.7.3",
         "eslint": "^7.27.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-webpack-plugin": "^3.2.0",
+        "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.7.2",
+        "postcss": "^8.4.16",
+        "postcss-loader": "^7.0.1",
+        "postcss-preset-env": "^7.8.2",
         "prettier": "2.2.1",
+        "sass": "^1.55.0",
+        "sass-loader": "^13.0.2",
         "style-loader": "^3.3.1",
-        "ts-loader": "^9.4.2",
         "typescript": "^4.9.3",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.11.1",
         "webpack-merge": "^5.8.0"
+    },
+    "dependencies": {
+        "@babel/polyfill": "^7.12.1",
+        "loader-utils": "^2.0.4"
     }
 }
