--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
         "lint": "eslint . --ext .ts",
-        "lint-fix": "npx eslint --ext js,jsx,ts,tsx ./src --fix"
+        "lint-fix": "npx eslint --ext js,ts ./src --fix"
     },
     "repository": {
         "type": "git",
