--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "sass": "^1.55.0",
         "sass-loader": "^13.0.2",
         "style-loader": "^3.3.1",
+        "ts-loader": "^9.4.2",
         "typescript": "^4.9.3",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1",
