--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
         "lint": "eslint . --ext .ts",
-        "lint-fix": "npx eslint --ext js,ts ./src --fix"
+        "lint-fix": "npx eslint --ext js,ts ./src --fix",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -37,9 +38,13 @@
         "@babel/core": "^7.20.5",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.18.6",
+        "@testdeck/mocha": "^0.3.3",
+        "@types/chai": "^4.3.4",
+        "@types/jest": "^29.2.5",
         "@typescript-eslint/eslint-plugin": "^5.45.1",
         "@typescript-eslint/parser": "^5.45.1",
         "babel-loader": "^9.1.0",
+        "chai": "^4.3.7",
         "css-loader": "^6.7.3",
         "eslint": "^7.27.0",
         "eslint-config-prettier": "^8.3.0",
@@ -48,7 +53,11 @@
         "eslint-webpack-plugin": "^3.2.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
         "mini-css-extract-plugin": "^2.7.2",
+        "mocha": "^10.2.0",
+        "nyc": "^15.1.0",
         "postcss": "^8.4.16",
         "postcss-loader": "^7.0.1",
         "postcss-preset-env": "^7.8.2",
@@ -57,6 +66,7 @@
         "sass-loader": "^13.0.2",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.4.2",
+        "ts-node": "^10.9.1",
         "typescript": "^4.9.3",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1",
@@ -66,5 +76,11 @@
     "dependencies": {
         "@babel/polyfill": "^7.12.1",
         "loader-utils": "^2.0.4"
+    },
+    "jest": {
+        "testEnvironment": "jsdom"
+    },
+    "node": {
+        "global": true
     }
 }
